The Database is working now. Bare bones cshtml files as well

--- a/Mission06_Larson/Views/Shared/_Layout.cshtml
+++ b/Mission06_Larson/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Get To Know Joel</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieFile">Enter A Film</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +41,8 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2025 - Mission06_Larson - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2025 - Mission06_Larson - Privacy <br>
+        Created By Davis Larson
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
