adding the images and confirmation page

--- a/Mission06_Larson/Views/Home/Confirmation.cshtml
+++ b/Mission06_Larson/Views/Home/Confirmation.cshtml
@@ -5,4 +5,4 @@
 
 
 <h3>Would you like to add another?</h3>
-<button asp-controller="Home" asp-action="MovieFile">Click Here</button>
+<a asp-controller="Home" asp-action="MovieFile" class="btn btn-primary">Click Here</a>
