--- a/Mission06_Larson/Views/Home/Index.cshtml
+++ b/Mission06_Larson/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<div class="align-items-center">
+<h1 >The Joel Hilton Film Collection</h1>
 
-<h1>The Joel Hilton Film Collection</h1>
-
-@* Add the image of Joel here *@
+<img src="~/img/JoelHiltonImg.jpg" alt="Headshot of Joel Hilton">
+</div>
