--- a/Mission06_Larson/Views/Home/GetToKnowJoel.cshtml
+++ b/Mission06_Larson/Views/Home/GetToKnowJoel.cshtml
@@ -1,9 +1,19 @@
 
+<div class="container">
+    <h1>Get To Know Joel Hilton</h1>
 
-<h1>Get To Know Joel Hilton</h1>
+    <p>Joel Hilton is the younger brother of BYU's beloved Professor Spencer Hilton.</p>
 
-<h2>Quick Wits Comedy</h2>
+    <h2>Quick Wits Comedy</h2>
 
-<h2>Baconsale Podcast</h2>
+    <p>Joel regularly performs at a club called <a href="https://www.qwcomedy.com/" target="_blank">Quick Wits Comedy</a>. Go check him out!</p>
 
-@* Add image of Baconsale HERE with link to website. *@
+    <h2>Baconsale Podcast</h2>
+
+    <p>Joel also has a podcaset called <a href="https://baconsale.com/" target="_blank">Baconsale</a>. It is a movie review/pop culture podcast, and is a great time just like bacon.</p>
+
+    <a href="https://baconsale.com/" target="_blank"><img src="~/img/Baconsale.jpg" alt="Baconsale Group" style="height: 500px"></a>
+
+</div>
+
+<br><br><br>
