--- a/Mission06_Larson/Views/Home/GetToKnowJoel.cshtml
+++ b/Mission06_Larson/Views/Home/GetToKnowJoel.cshtml
@@ -4,16 +4,22 @@
 
     <p>Joel Hilton is the younger brother of BYU's beloved Professor Spencer Hilton.</p>
 
-    <h2>Quick Wits Comedy</h2>
+    <div class="container">
+        <ul>
+            <li>
+                <h3>Quick Wits Comedy</h3>
 
-    <p>Joel regularly performs at a club called <a href="https://www.qwcomedy.com/" target="_blank">Quick Wits Comedy</a>. Go check him out!</p>
+                <p>Joel regularly performs at a club called <a href="https://www.qwcomedy.com/" target="_blank">Quick Wits Comedy</a>. Go check him out!</p>
+            </li>
+            <li>
+                <h3>Baconsale Podcast</h3>
 
-    <h2>Baconsale Podcast</h2>
+                <p>Joel also has a podcaset called <a href="https://baconsale.com/" target="_blank">Baconsale</a>. It is a movie review/pop culture podcast, and is a great time just like bacon.</p>
 
-    <p>Joel also has a podcaset called <a href="https://baconsale.com/" target="_blank">Baconsale</a>. It is a movie review/pop culture podcast, and is a great time just like bacon.</p>
-
-    <a href="https://baconsale.com/" target="_blank"><img src="~/img/Baconsale.jpg" alt="Baconsale Group" style="height: 500px"></a>
-
+                <a href="https://baconsale.com/" target="_blank"><img src="~/img/Baconsale.jpg" alt="Baconsale Group" style="height: 500px"></a>
+            </li>
+        </ul>
+    </div>
 </div>
 
 <br><br><br>
