--- a/Mission06_Larson/Views/Shared/_Layout.cshtml
+++ b/Mission06_Larson/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
         <div class="container-fluid">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Mission06_Larson</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,13 +20,13 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Get To Know Joel</a>
+                        <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="About">Get To Know Joel</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieFile">Enter A Film</a>
+                        <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="MovieFile">Enter A Film</a>
                     </li>
                 </ul>
             </div>
@@ -39,9 +39,9 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
+<footer class="border-top footer text-muted bg-dark">
     <div class="container">
-        &copy; 2025 - Mission06_Larson - Privacy <br>
+        &copy; 2025 - Mission06_Larson - Privacy -
         Created By Davis Larson
     </div>
 </footer>
