final commit for mission 6

--- a/Mission06_Larson/Views/Home/GetToKnowJoel.cshtml
+++ b/Mission06_Larson/Views/Home/GetToKnowJoel.cshtml
@@ -16,7 +16,9 @@
 
                 <p>Joel also has a podcaset called <a href="https://baconsale.com/" target="_blank">Baconsale</a>. It is a movie review/pop culture podcast, and is a great time just like bacon.</p>
 
-                <a href="https://baconsale.com/" target="_blank"><img src="~/img/Baconsale.jpg" alt="Baconsale Group" style="height: 500px"></a>
+                <a href="https://baconsale.com/" target="_blank">
+                    <img src="~/img/Baconsale.jpg" alt="Baconsale Group" style="height: 500px">
+                </a>
             </li>
         </ul>
     </div>
